2007-12-07  Satoshi Nakagawa <artension@gmail.com>

	Changed to set ENV['HOME'] at starting up.

2007-12-07  Satoshi Nakagawa <artension@gmail.com>

	Changed to split a text message if the message is too long.
	Eliminated "include OSX" and "OSX::".

2007-12-05  Satoshi Nakagawa <artension@gmail.com>

	Changed a penalty factor for text size.

2007-12-04  Satoshi Nakagawa <artension@gmail.com>

	Changed the url regex to disallow double quotes.

2007-12-04  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, NSSelectionArray#to_a causes a segmentation fault on Tiger.

2007-12-03  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, /me command didn't work well.

2007-12-03  Satoshi Nakagawa <artension@gmail.com>

	Changed to parse raw commands.

2007-12-03  Satoshi Nakagawa <artension@gmail.com>

	Changed to put received files into ~/Downloads if it exists.

2007-12-03  Satoshi Nakagawa <artension@gmail.com>

	Implemented cmd+'+'/'-' for changing text size.

2007-12-03  Satoshi Nakagawa <artension@gmail.com>

 	Implemented log theme.

2007-12-03  Satoshi Nakagawa <artension@gmail.com>

	Implementing log theme.

2007-12-03  Satoshi Nakagawa <artension@gmail.com>

	Preparing for log theme.

2007-12-02  Satoshi Nakagawa <artension@gmail.com>

	Added compatibility stuff for old RubyCocoa releases.
	Refactoring.

2007-12-02  Satoshi Nakagawa <artension@gmail.com>

	Rewrote build scripts.

2007-12-02  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, the nick sheet won't show after right clicked on a log view

2007-12-01  Satoshi Nakagawa <artension@gmail.com>

	Refactoring utility scripts.

2007-12-01  Satoshi Nakagawa <artension@gmail.com>

	Changed to use pathname in filelogger.rb.

2007-12-01  Satoshi Nakagawa <artension@gmail.com>

	Changed to highlight a current nickname in priority.
	Fixed a nil access bug, when the parameters of a message are too few.

2007-11-30  Satoshi Nakagawa <artension@gmail.com>
